0.16 20100425
    . Added ->submit
    . Added ->submit_form with_fields => [...]

0.15 20091216
    . Better Makefile.PL and Prereq patch by Alexandr Ciornii (chorny)
    . Removed some dead code
    . Fixed some incompatible Javascript

0.14 20091215
    . Added documentation about bufsize parameter
    . Option to recursively search frames

0.13 20091213
    . Added way to use the "current" tab instead of a new/known tab
    . Fixed a bug regarding reusing tabs
    . Added eg/ directory with examples
    . Added way to specify maximum buffer size at startup
      in response to http://perlmonks.org/?node_id=811436

0.12 20091130
    ! Renamed to ::Firefox
      This affects all your scripts, unfortunately.
    . Added ->save_url for downloading content to disk
    . Added ->save_document for downloading the current document to disk
    . Make ->synchronize and ->click not automatically fetch the response
    . Guard against empty/undefined schemes when constructing the JS response
    . Add and document a method to launch Firefox if it's not already running.

0.11 20091126
    . Implement real HTTP response codes instead of the faked
      response codes.
    * Fix a memory leak/cycle that prevented tabs from closing
    . Now needs MozRepl::RemoteObject 0.10 for the API to deregister
      callbacks.

0.10 20091121
    . implemented ->form_name, ->form_id, ->form_number
    . unified API between ->find_link, ->selector, ->xpath
    . Needs MozRepl::RemoteObject 0.09 to ensure that
      multiple $mech instances work
    
0.09 20091111
    . Allow ->eval_in_page() to specify an overriding
      environment, for example to override alert()

0.08 20091109
    . Make tests warn if I suspect that Javascript is
      blocked by Noscript. This makes some tests fail.
    . Require latest MozRepl::RemoteObject for sane encoding handling.

0.07 20091106
    . added ->eval_in_page() to evaluate Javascript in
      the context of the page